<resources>
    <string name="app_name">Dhishna</string>

    <string name="Facebook">Facebook</string>
    <string name="Google">Google</string>
    <string name="Email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="facebook_app_id">498642083963473</string>
    <string name="fb_login_protocol_scheme">fb498642083963473</string>
    <string name="title_activity_email_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_sign_up">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_institute">Institute Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
